--- a/NeolantDemo.DAL.Tests/App.config
+++ b/NeolantDemo.DAL.Tests/App.config
@@ -1,9 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="neolant"
-         connectionString="Server=VM-WIN7-MSSQL\SQLEXPRESS;Database=neolant;User ID=neolant;Password=neolant;"
-         providerName="System.Data.SqlClient" />
+    <add name="neolant" connectionString="Server=VM-WIN7-MSSQL\SQLEXPRESS;Database=neolant;User ID=neolant;Password=neolant;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
