--- a/NeolantDemo.WEB/packages.config
+++ b/NeolantDemo.WEB/packages.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="EmitMapper" version="1.0.0" targetFramework="net452" />
-  <package id="Flurl" version="1.1.2" targetFramework="net452" />
+  <package id="Flurl" version="1.1.2" targetFramework="net452" requireReinstallation="true" />
   <package id="Microsoft.AspNet.OData" version="5.9.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
